# GoblinPi

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/: Application.hpp  Engine.hpp  InputEnums.hpp
engine/include/engine/resource/: Buffer.hpp  Resource.hpp  VertexArray.hpp
engine/include/engine/utils/: FileSystem.hpp
engine/include/engine/utils/filesystem/: path.hpp
engine/include/glad/: glad.h
engine/source/: Application.cpp  Engine.cpp  Painter.cpp
engine/source/resource/: Buffer.cpp  VertexArray.cpp
example/: CMakeLists.txt  main.cpp
